log
Wed 20 Mar 2024 08:20:25 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:37: error: expected expression before ‘)’ token
   50 |     int* dato = (int*) malloc(sizeof);
      |                                     ^
Compilation failed
24f3a0c
Wed 20 Mar 2024 08:21:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
bc182e1
Wed 20 Mar 2024 08:22:04 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
4ccc9b0
Wed 20 Mar 2024 08:23:25 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
4f50c4c
Wed 20 Mar 2024 08:26:17 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:10: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   69 |     suma += numero;
      |          ^~
cc1: all warnings being treated as errors
Compilation failed
19d8e29
Wed 20 Mar 2024 08:29:37 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
ab000b2
Wed 20 Mar 2024 08:41:42 PM UTC: 
 exercises.c | 18 ++++++++++++++----
 1 file changed, 14 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:105:3: error: unknown type name ‘dato’
  105 |   dato* dato = top(P1);
      |   ^~~~
exercises.c:106:3: error: statement with no effect [-Werror=unused-value]
  106 |   P3
      |   ^~
exercises.c:106:5: error: expected ‘;’ before ‘}’ token
  106 |   P3
      |     ^
      |     ;
  107 | }
      | ~    
exercises.c:105:9: error: unused variable ‘dato’ [-Werror=unused-variable]
  105 |   dato* dato = top(P1);
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
f07b335
Wed 20 Mar 2024 08:42:55 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:108:1: error: expected expression before ‘}’ token
  108 | }
      | ^
exercises.c:104:10: error: unused variable ‘P3’ [-Werror=unused-variable]
  104 |   Stack* P3 = create_stack();
      |          ^~
cc1: all warnings being treated as errors
Compilation failed
9f81eaa
Wed 20 Mar 2024 08:46:31 PM UTC: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
e4823d2
